2004-01-09  Terry <tbiggs@users.sf.net>

	* added space between items in Bible and commentary dialog navigation 
	  tool bars
	* added global option support to gbs (for Andy's Life Time module)
	* the footnotes in lifetimes look bad - in BT also 
	  (may be a filter problem)


2004-01-06  Andy <andyp@users.sf.net>

	* internationalization improvements (close RFE #861280)
	* reworked Makefile.am, added 'make rpm' rule, reorganized
	* bumped version to 2.1.dev1 (this is a dev/test cycle)
	(NB GNOME 1.x build is probably broken due to gnomesword2 
	referenced in the configure and Makefile stuff)
	

2004-01-05  Terry <tbiggs@users.sf.net>

	* added check for ".sword/InstallMgr/InstallMgr.conf" in users home 
	  directory.
	* added progress bar for refresh remote
	* added dialog to warn user to restart gs when modules have been changed
	  until we can do better.
	* changed dialog to restart gs if user answers yes.
	

2004-01-05  Terry <tbiggs@users.sf.net>

	* added module manager
	  backend/module_manager.cc
	  backend/module_manager.hh
	  main/mod_mgr.c
	  main/mod_mgr.h
	  gnome2/mod_mgr.c
	  gui/mod_mgr.h


2004-01-02  Andy <andyp@users.sf.net>

	* updated some strings
	* cleaned up HTML output for generic book display
	

2003-12-31  Andy <andyp@users.sf.net>

	* update spec file
	* fix UI (menu item ordering and access keys per RFE #866127)
	* fix #include's of gal headers
	* string updates
	* preliminary support for GNOME session based on code from gedit


2003-12-31  Terry <tbiggs@users.sf.net>

	* remove pango markup from strings in bookmarks_menu.c and editor_menu.c


2003-12-30  Terry <tbiggs@users.sf.net>

	* fixed bug #866548
	* added space to navigation toolbar by adding empty labels
	

2003-12-26  Terry <tbiggs@users.sf.net>

	* added tooltips to all items on the navigation 
	  toolbar in toolbar_nav.c
	

2003-12-25  Terry <tbiggs@users.sf.net>

	* moved Spell.idl and spell_gnome_spell.c form /main to /gnome2